--- a/alx-movie-app/manifest.json
+++ b/alx-movie-app/manifest.json
@@ -29,12 +29,12 @@
       "type": "image/png"
     },
     {
-      "src": "icons/car-152x152.png",
+      "src": "icons/apple-icon-152x152.png",
       "sizes": "152x152",
       "type": "image/png"
     },
     {
-      "src": "icons/car-192x192.png",
+      "src": "icons/android-chrome-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
@@ -44,7 +44,7 @@
       "type": "image/png"
     },
     {
-      "src": "icons/car-384x384.png",
+      "src": "icons/ms-icon-310x310.png",
       "sizes": "384x384",
       "type": "image/png"
     },
